[package]
name = "async-std-hyper"
version = "0.1.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1"
hyper = { version = "0.14.20", default-features = false, features = ["server", "http1", "http2"] }
tokio = { version = "1.20.1", default-features = false }
